# financial-transactions

./: .coverage  .env  .gitignore  Dockerfile  README.md  alembic.ini  code_test.py  docker-compose.yml  generate_token.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/exception_handler/: handlers.py
api/routes/: accounts_api.py  auth.py  transactions_api.py
app/: main.py
app/infrastructure/: database.py
app/use_cases/: base_use_case.py
application/dtos/: base_dto.py  create_account_dto.py  create_transaction_dto.py  transaction_report_dto.py
application/use_cases/: base_use_case.py  create_transaction.py  generate_transaction_report.py  use_case_factory.py
auth_token/: generate_token.py
domain/entities/: account.py  transaction.py
domain/repositories/: account_repository.py  base_repository.py  transaction_repository.py
infrastructure/: database.py
infrastructure/models/: account_model.py  transaction_model.py
infrastructure/repositories/: postgres_transaction_repository.py
migrations/: env.py
migrations/versions/: 20260501_231650-fabbe22dfd5d_create_users_table.py  20260501_231800-70a58dc46771_create_transactions_table.py  20260501_231838-814f6d13ce38_create_accounts_table.py  20260501_232142-e3f6fd3fea6b_add_type_column_to_account_table.py  20260501_232318-db43a23e090a_add_account_id_foreign_key_to_.py  20260502_015638-05afb0bc80bf_init_schemas.py  35e85de9c43b_add_type_column.py  (+5 more)
tests/: test_create_transaction.py  test_create_transaction_dto.py  test_generate_transaction_report.py  test_use_case_factory.py
(+89 files in other folders)
