[project]
name = "financial-transations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asgiref==3.10.0",
    "asyncpg==0.31.0",
    "bcrypt==5.0.0",
    "click==8.3.1",
    "colorama==0.4.6",
    "coverage==7.13.4",
    "django==5.2.7",
    "ecdsa==0.19.1",
    "fastapi==0.135.1",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "packaging==26.0",
    "passlib==1.7.4",
    "pluggy==1.6.0",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "python-jose==3.5.0",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "sqlparse==0.5.3",
    "starlette==0.52.1",
    "structlog==25.5.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "uvicorn==0.41.0",
]
